# griffin

./: .gitignore  CLAUDE.md  CPLD-guidance.md  Makefile  README.md  c++-style.md  chip-inventory.csv  codegen.py  griffin-programmers-manual.md  griffin.generated.h  griffin.generated.inc  griffin.generated.ld  griffin.generated.vh  griffin.md  griffin.yml  hw_schema.yml  index.html
board/: .gitignore  board-pcb-rev-1.distilled.txt  board-pcb-rev-1.net  board.kicad_pcb  board.kicad_pro  board.kicad_sch  cfcard.kicad_sym  composite.kicad_sch  cpu.kicad_sch  expansion.kicad_sch  fixup-cf.py  glue.kicad_sch  io.kicad_sch  kicad_netlist_summary_2.py  power-clock.kicad_sch  test-points.kicad_sch
board/board-gerb/: board-B_Cu.gbr  board-B_Mask.gbr  board-B_Paste.gbr  board-B_Silkscreen.gbr  board-Edge_Cuts.gbr  board-F_Cu.gbr  board-F_Mask.gbr  board-F_Paste.gbr  (+6 more)
cpld/: .gitignore  Makefile  NOTES.md  PROBE_ENGINE  PROBE_JTAG  fit_report.py
doc/: CPLD-guidance.md  ENGINE-programming.md  VIDEO-programming.md  c++-style.md  griffin-programmers-manual.md  verilog-style.md
emulator/: CMakeLists.txt  decode.gnuplot  emulator.cpp
firmware/: .gitignore  BUILD_TOOLCHAIN_CONTAINER  Dockerfile  Makefile  cf.h  crt0.s  decode_buserr.py  diskio.c  early_log.cpp  early_log.h  ffconf.h  font.h  font_6x10.cpp  font_8x16.cpp  font_8x8.cpp  griffin.h  linker.ld  m68k-crosstool-ng.config  m68k-g++  m68k-gcc  m68k-nm  m68k-objcopy  m68k-objdump  ps2.cpp  ps2.h  rom.cpp  splash.cpp  splash.h  startup.raw  syscalls.c  textport.cpp  textport.h  vt102.cpp  vt102.h
io-mcu/: .gitignore  Makefile  at89s52_isp.py  main.c
sanity/: Makefile  linker.ld  sanity.s
splash/: GO  convert_splash.py  splash.cpp  splash.h  splash_mono.pgm  splash_write.cpp  splash_write.h
(+6 files in other folders)
